--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,173 @@
-.App {
-  text-align: center;
+body {
+  background: #1c2553;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+form {
+  max-width: 500px;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+h1 {
+  font-weight: 200px;
   color: white;
+  text-align: center;
+  padding-bottom: 10px;
+  }
+
+.form {
+  background: #1c32ac;
+  max-width: 400px;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+p {
+  color: #bf1650;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p::before {
+  display: inline;
+  content: "⚠ ";
+}
+
+input {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  border-radius: 4px;
+  border: 1px solid white;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  font-size: 14px;
+}
+
+label {
+  line-height: 2;
+  text-align: left;
+  display: block;
+  margin-bottom: 13px;
+  margin-top: 20px;
+  color: white;
+  font-size: 20px;
+  font-weight: 200;
+}
+
+button[type="submit"],
+input[type="submit"] {
+  display: block;
+  background: #ec085f;
+  color: white;
+  text-transform: capitalize;
+  border: none;
+  margin-top: 40px;
+  padding: 20px;
+  letter-spacing: 10px;
+  font: 400 18px Arial;
+}
+
+button[type="submit"]:hover,
+input[type="submit"]:hover {
+  background: #bf1650;
+}
+button[type="submit"],
+input[type="button"],
+input[type="submit"] {
+  -webkit-appearance: none;
+}
+button[type="submit"]:active,
+input[type="button"]:active,
+input[type="submit"]:active {
+  transition: 0.3s all;
+  transform: translateY(3px);
+  border: 1px solid transparent;
+  opacity: 0.8;
+}
+
+input:disabled {
+  opacity: 0.4;
+}
+
+input[type="button"]:hover {
+  transition: 0.3s all;
+}
+
+.App {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+button[type="button"] {
+  display: block;
+  appearance: none;
+  background: #333;
+  color: white;
+  border: none;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  border-radius: 4px;
+}
+
+hr {
+  margin-top: 30px;
+}
+
+
+.already{
+  display: block;
+  color: white;
+  font-weight: 700;
+  text-shadow: none;
+  text-align: right;
+  margin-top: 30px;
+}
+
+.lnk:hover {
+  background: #bf1650;
+}
+.lnk{
+  -webkit-appearance: none;
+}
+.lnk :active {
+  transition: 0.3s all;
+  transform: translateY(3px);
+  border: 1px solid transparent;
+  opacity: 0.8;
+}
+.lnk:hover {
+  transition: 0.3s all;
+}
+
+.lnk {
+    display: block;
+  background: #ec085f;
+  color: white;
+  text-transform: capitalize;
+  border-radius: 4px;
+  text-decoration: none;
+  text-align: center;
+  padding: 20px 40px;
+  margin-top: 40px;
+  cursor: default;
+  letter-spacing: 8px;
+  font: 400 18px Arial;
+}
+.btn{
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+  background: #ec085f;
+  color: #ffffff;
+  text-transform: capitalize;
+  border-radius: 4px;
+  text-decoration: none;
+  text-align: center;
+  padding: 20px 40px;
+  margin-top: 40px;
+  margin-left: 10px;
+  margin-right: 10px;
+  cursor: default;
+  letter-spacing: 8px;
+  font: 400 18px Arial;
 }
