--- a/src/App.css
+++ b/src/App.css
@@ -145,7 +145,7 @@ h2{
 }
 .dl-ap{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .but{
     color: white;
@@ -155,10 +155,11 @@ h2{
     border-radius: 4px;
     letter-spacing: 8px;
     font: 18px Arial;
-    width:240px;
+    width:500px;
     height: 55px;
     background: #343A40;
     cursor: default;
+    margin-top: 20px;
 }
 .but:hover{
     background: #007BFF;
@@ -168,4 +169,11 @@ h2{
     transform: translateY(3px);
     border: 1px solid transparent;
     opacity: 0.8;
+}
+.ln_pg{
+    color: white;
+    font: 18px Arial;
+}
+.li_pg{
+    color: white;
 }
