--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ input {
     width: 100%;
     border-radius: 4px;
     border: 1px solid white;
-    padding: 10px 10px;
+    padding: 10px;
     margin-bottom: 20px;
     font-size: 14px;
 }
@@ -36,7 +36,7 @@ label {
     line-height: 2;
     text-align: left;
     display: block;
-    margin-bottom: 13px;
+    margin-bottom: 12px;
     margin-top: 20px;
     color: white;
     font-size: 20px;
